UI: Fix quickstart button alignment on OSX
(integrated from master branch change 9.2.1-625-g3510ae0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/plat/shared/modules.less
+++ b/src/chrome/komodo/skin/plat/shared/modules.less
@@ -329,13 +329,19 @@ vbox[anonid="quickstart"]
     .inner > button
     {
         width: 250px;
-        padding: 6px 4px;
+        padding: 6px 4px !important;
         margin: 2px 0 1px;
 
         label
         {
             text-align: left;
         }
+    }
+    
+    .footer > button
+    {
+        padding: 2px 4px !important;
+        margin: 2px 4px;
     }
     
     image.button-icon
